I have to fix the sendMessageForm's box-shadow. It's disappearing when the scrollbar is displayed

--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@
   background-color: var(--main-color);
   height: 100%;
   z-index: 200;
-  box-shadow: 6px 0px 12px rgba(0,0,0,0.025);
+  box-shadow: 6px 0px 12px rgba(0,0,0,0.055);
 }
 .room-title {
   color: var(--white-color);
@@ -270,7 +270,8 @@
   }
 
   .sendMessageForm input {
-    box-shadow: 0px -6px 12px rgba(0,0,0,0.025); 
+    box-shadow: 0px -6px 12px rgba(0,0,0,0.55);
+    /* TODO: For some reason the box shadow is disappearing when the scroll bar is activated. */
   }
 
   .roomList {
